# kill-time

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  vite.config.js
api/: AGENTS.md  README.md  pyproject.toml
api/src/: main.py
api/src/core/: config.py
api/src/health/: __init__.py  routes.py
api/src/middleware/: __init__.py  cors.py
api/tests/: test_health.py
src/: App.jsx  index.css
src/components/ui/: button.jsx  card.jsx
src/pages/: Home.jsx  Login.jsx
web/: AGENTS.md  README.md  index.html  package-lock.json  tsconfig.json
web/src/: index.css
web/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx
